Fix unit test cases